--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			
 			if(!localStorage.getItem('cor_u')) {
 				var cor = cores[Math.floor(Math.random() * cores.length)];
-				localStorage.setItem('cor_u', )
+				localStorage.setItem('cor_u', cor);
 			}
 
 			if(localStorage.getItem('nome_u')){
@@ -167,7 +167,7 @@
 
 			var spanUsuario = document.createElement('span');
 			spanUsuario.setAttribute('class', 'usuario');
-			spanUsuario.setAttribute('style', 'color: #' + localStorage.getItem(''));
+			spanUsuario.setAttribute('style', 'color: #' + localStorage.getItem('cores_u'));
 
 			var spanMessage = document.createElement('span');
 			spanMessage.setAttribute('class', 'messages');
