--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 			<input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
 			<h1 class="mdl-mega-footer__heading">Features</h1>
 			<ul class="mdl-mega-footer__link-list">
-				<li><a href="#">About</a></li>
-				<li><a href="#">Terms</a></li>
-				<li><a href="#">Partners</a></li>
-				<li><a href="#">Updates</a></li>
+				<li><a href="https://github.com/jonathansantos/chat">About</a></li>
+				<li><a href="https://github.com/jonathansantos/chat">Terms</a></li>
+				<li><a href="https://github.com/jonathansantos/chat">Partners</a></li>
+				<li><a href="https://github.com/jonathansantos/chat">Updates</a></li>
 			</ul>
 		</div>
 
@@ -83,9 +83,9 @@
 			<input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
 			<h1 class="mdl-mega-footer__heading">Details</h1>
 			<ul class="mdl-mega-footer__link-list">
-				<li><a href="#">Specs</a></li>
-				<li><a href="#">Tools</a></li>
-				<li><a href="#">Resources</a></li>
+				<li><a href="https://github.com/jonathansantos/chat">Specs</a></li>
+				<li><a href="https://github.com/jonathansantos/chat">Tools</a></li>
+				<li><a href="https://github.com/jonathansantos/chat">Resources</a></li>
 			</ul>
 		</div>
 
@@ -93,11 +93,11 @@
 			<input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
 			<h1 class="mdl-mega-footer__heading">Technology</h1>
 			<ul class="mdl-mega-footer__link-list">
-				<li><a href="#">How it works</a></li>
-				<li><a href="#">Patterns</a></li>
-				<li><a href="#">Usage</a></li>
-				<li><a href="#">Products</a></li>
-				<li><a href="#">Contracts</a></li>
+				<li><a href="https://github.com/jonathansantos/chat#">How it works</a></li>
+				<li><a href="https://github.com/jonathansantos/chat#">Patterns</a></li>
+				<li><a href="https://github.com/jonathansantos/chat#">Usage</a></li>
+				<li><a href="https://github.com/jonathansantos/chat#">Products</a></li>
+				<li><a href="https://github.com/jonathansantos/chat#">Contracts</a></li>
 			</ul>
 		</div>
 
@@ -105,9 +105,9 @@
 			<input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
 			<h1 class="mdl-mega-footer__heading">FAQ</h1>
 			<ul class="mdl-mega-footer__link-list">
-				<li><a href="#">Questions</a></li>
-				<li><a href="#">Answers</a></li>
-				<li><a href="#">Contact us</a></li>
+				<li><a href="https://github.com/jonathansantos/chat#">Questions</a></li>
+				<li><a href="https://github.com/jonathansantos/chat#">Answers</a></li>
+				<li><a href="https://github.com/jonathansantos/chat#">Contact us</a></li>
 			</ul>
 		</div>
 
@@ -116,8 +116,8 @@
 		<div class="mdl-mega-footer__bottom-section">
 			<div class="mdl-logo">Title</div>
 			<ul class="mdl-mega-footer__link-list">
-				<li><a href="#">Help</a></li>
-				<li><a href="#">Privacy & Terms</a></li>
+				<li><a href="https://github.com/jonathansantos/chat#">Help</a></li>
+				<li><a href="https://github.com/jonathansantos/chat#">Privacy & Terms</a></li>
 			</ul>
 		</div>
 	</footer>
