--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 	<script type="text/javascript">
 
 		var randomName = function(){
-			var fn = ['Chaves', 'Zika', 'Link', 'HueHue', 'Nerd', 'PogMan', 'Bird', 'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo', 'Sarrada', 'Batimam', 'Gocu'];
-			var ln = ['do bonde', 'Escobar', 'Candido portinare', 'Hard', 'Gay', 'of Bel Air', 'que mora logo ali', 'no ar', 'carrero', 'Tranquilino'];
+			var fn = ['Chaves', 'Zika', 'Link', 'HueHue', 'Nerd', 'PogMan', 'Bird', 'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo', 'Sarrada', 'Batimam', 'Gocu';
+			var ln = ['do bonde', 'Escobar', 'Candido portinare', 'Hard', 'Gay', 'of Bel Air', 'que mora logo ali', 'no ar', 'carrero', 'Tranquilino', 'é um fracassado'];
 			
 			if(localStorage.getItem('nome_u')){
 				return localStorage.getItem('nome_u');
@@ -141,7 +141,7 @@
 		};
 
 		var randomColor = function(){
-			var cores = ['FF2194', 'C821FF', '3F21FF', '67DBCE', 'FC4955', '209E2A', 'F58E27', 'C0E334'];
+			var cores = ['FF2194', 'C821FF', '3F21FF', '67DBCE', 'FC4955', '209E2A', 'F58E27', 'C0E334', 'FF0000'];
 
 			if(!localStorage.getItem('cor_u')) {
 				var cor = cores[Math.floor(Math.random() * cores.length)];
