--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 		var randomName = function(){
 			var fn = ['Chaves', 'Zika', 'Link', 'HueHue', 'Nerd', 'PogMan', 'Bird', 'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo', 'Sarrada', 'Batimam', 'Gocu'];
-			var ln = ['do bonde', 'Escobar', 'Candido portinare', 'Hard', 'Gay', 'of Bel Air', 'que mora logo ali', 'no ar', 'carrero', 'Tranquilino', 'é um fracassado'];
+			var ln = ['do bonde', 'Escobar', 'Candido portinare', 'Hard', 'Gay', 'of Bel Air', 'que mora logo ali', 'no ar', 'carrero', 'Tranquilino', 'é um fracassado', 'orientado à objeto'];
 			
 			if(localStorage.getItem('nome_u')){
 				return localStorage.getItem('nome_u');
