--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 			});
 			myFire.limitToLast(15).on('child_added', function(snapshot) {
 				adicionarTexto(snapshot.val());
-				document.querySelector('#messages').animate({scrollBottom: 30000}, 'slow')
+				document.querySelector('#messages').animate({scrollTop: $('#messages').height()}, 500);  
 			});
 		});
 	</script>
