--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 			$('#text').keypress(function (e) {
 				if(e.keyCode == 13){
 					var value = $(this).val();
-					if(/(\S+?[\\\/])+?\S+?\.(png|jpeg|jpg|gif)/gi.test(value) {
+					if(/(\S+?[\\\/])+?\S+?\.(png|jpeg|jpg|gif)/gi.test(value)) {
 						value = '<img style="width: 10%;" src="'+value+'"></img>';
 					}
 					if(value.trim().length > 1){
