--- a/index.html
+++ b/index.html
@@ -168,11 +168,16 @@
 			$('#text').keypress(function (e) {
 				if(e.keyCode == 13){
 					var value = $(this).val();
-					if(/(\S+?[\\\/])+?\S+?\.(png|jpeg|jpg|gif)/gi.test(value)) {
-						value = '<img style="width: 90%;" src="'+value+'"></img>';
-					}
-					if(value.trim().length > 1){
-						myFire.push({name: randomName(), text: value, color : randomColor()});
+					
+					if(val == 'cls'){
+						$('#messages').empty();
+					}else{
+						if(/(\S+?[\\\/])+?\S+?\.(png|jpeg|jpg|gif)/gi.test(value)) {
+							value = '<img style="width: 90%;" src="'+value+'"></img>';
+						}
+						if(value.trim().length > 1){
+							myFire.push({name: randomName(), text: value, color : randomColor()});
+						}
 					}
 					$(this).val('');
 				}
