--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				if(e.keyCode == 13){
 					var value = $(this).val();
 					
-					if(val == 'cls'){
+					if(value == 'cls'){
 						$('#messages').empty();
 					}else{
 						if(/(\S+?[\\\/])+?\S+?\.(png|jpeg|jpg|gif)/gi.test(value)) {
