--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
 	<style type="text/css">
+	
+	html, body {
+		margin: 0;
+		padding: 0;
+		height: 100vh;
+	}
+	
 	.body {
 		background-color: #ddd;
 	}
@@ -41,7 +48,9 @@
 
 	<!-- RODAPE -->
 	<div class="header">
-		<img src="https://lh5.googleusercontent.com/-l9BC0xu8qiw/AAAAAAAAAAI/AAAAAAAACxs/YBcLsRkJxos/s0-c-k-no-ns/photo.jpg" width="64" height="64">
+		<a href="https://github.com/jonathansantos/chat">
+			<img src="https://lh5.googleusercontent.com/-l9BC0xu8qiw/AAAAAAAAAAI/AAAAAAAACxs/YBcLsRkJxos/s0-c-k-no-ns/photo.jpg" width="64" height="64">
+		</a>
 		<span>Bradesco</span>
 	</div>
 	<!-- RODAPE -->
@@ -63,65 +72,6 @@
 
 	<!-- CONTEUDO -->
 
-
-	<!-- FOOTER -->
-	<footer class="mdl-mega-footer">
-		<div class="mdl-mega-footer__middle-section">
-
-		<div class="mdl-mega-footer__drop-down-section">
-			<input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-			<h1 class="mdl-mega-footer__heading">Features</h1>
-			<ul class="mdl-mega-footer__link-list">
-				<li><a href="https://github.com/jonathansantos/chat">About</a></li>
-				<li><a href="https://github.com/jonathansantos/chat">Terms</a></li>
-				<li><a href="https://github.com/jonathansantos/chat">Partners</a></li>
-				<li><a href="https://github.com/jonathansantos/chat">Updates</a></li>
-			</ul>
-		</div>
-
-		<div class="mdl-mega-footer__drop-down-section">
-			<input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-			<h1 class="mdl-mega-footer__heading">Details</h1>
-			<ul class="mdl-mega-footer__link-list">
-				<li><a href="https://github.com/jonathansantos/chat">Specs</a></li>
-				<li><a href="https://github.com/jonathansantos/chat">Tools</a></li>
-				<li><a href="https://github.com/jonathansantos/chat">Resources</a></li>
-			</ul>
-		</div>
-
-		<div class="mdl-mega-footer__drop-down-section">
-			<input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-			<h1 class="mdl-mega-footer__heading">Technology</h1>
-			<ul class="mdl-mega-footer__link-list">
-				<li><a href="https://github.com/jonathansantos/chat#">How it works</a></li>
-				<li><a href="https://github.com/jonathansantos/chat#">Patterns</a></li>
-				<li><a href="https://github.com/jonathansantos/chat#">Usage</a></li>
-				<li><a href="https://github.com/jonathansantos/chat#">Products</a></li>
-				<li><a href="https://github.com/jonathansantos/chat#">Contracts</a></li>
-			</ul>
-		</div>
-
-		<div class="mdl-mega-footer__drop-down-section">
-			<input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-			<h1 class="mdl-mega-footer__heading">FAQ</h1>
-			<ul class="mdl-mega-footer__link-list">
-				<li><a href="https://github.com/jonathansantos/chat#">Questions</a></li>
-				<li><a href="https://github.com/jonathansantos/chat#">Answers</a></li>
-				<li><a href="https://github.com/jonathansantos/chat#">Contact us</a></li>
-			</ul>
-		</div>
-
-		</div>
-
-		<div class="mdl-mega-footer__bottom-section">
-			<div class="mdl-logo">Title</div>
-			<ul class="mdl-mega-footer__link-list">
-				<li><a href="https://github.com/jonathansantos/chat#">Help</a></li>
-				<li><a href="https://github.com/jonathansantos/chat#">Privacy & Terms</a></li>
-			</ul>
-		</div>
-	</footer>
-	<!-- FOOTER -->
 
 	<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 	<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
