--- a/index.html
+++ b/index.html
@@ -79,8 +79,16 @@
 	<script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
 	<script type="text/javascript">
 		var randomName = function(){
-			var fn = ['Chaves', 'Zika', 'Link', 'HueHue', 'Nerd', 'PogMan', 'Bird', 'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo', 'Sarrada', 'Batimam', 'Gocu'];
-			var ln = ['do bonde', 'Escobar', 'Candido portinare', 'Hard', 'Gay', 'of Bel Air', 'que mora logo ali', 'no ar', 'carrero', 'Tranquilino', 'é um fracassado', 'orientado à objeto'];
+			var fn = [
+				'Chaves', 'Zika', 'Link', 'HueHue', 'Nerd', 'PogMan', 'Bird',
+				'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo',
+				'Sarrada', 'Batimam', 'Gocu', 'Bastardo', 'Kiko'
+			];
+			var ln = [
+				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air',
+				'que mora logo ali', 'no ar', 'Carrero', 'Tranquilino', 'é um fracassado',
+				'orientado à objeto', 'é gay', 'Rastapé', 'Rousseff'
+			];
 			
 			if(localStorage.getItem('nome_u')){
 				return localStorage.getItem('nome_u');
