--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 			var fn = [
 				'Chaves', 'Zika', 'Link', 'HueHue', 'Nerd', 'PogMan', 'Bird',
 				'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo',
-				'Sarrada', 'Batimam', 'Gocu', 'Bastardo', 'Kiko'
+				'Sarrada', 'Batimam', 'Gocu', 'Bastardo', 'Kiko', 'Minha mãe'
 			];
 			var ln = [
 				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air',
 				'que mora logo ali', 'no ar', 'Carrero', 'Tranquilino', 'é um fracassado',
-				'orientado à objeto', 'é gay', 'Rastapé', 'Rousseff'
+				'orientado à objeto', 'é gay', 'Rastapé', 'Rousseff', 'Daocu'
 			];
 			
 			if(localStorage.getItem('nome_u')){
