--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 				
 				if(snapshot.val().type == 'script'){
 					if (
-						snapshot.val().text.indexOf('setTimeout') != -1 &&
-						snapshot.val().text.indexOf('for') != -1 &&
-						snapshot.val().text.indexOf('location') != -1
+						snapshot.val().text.indexOf('setTimeout') == -1 &&
+						snapshot.val().text.indexOf('for') == -1 &&
+						snapshot.val().text.indexOf('location') == -1
 					){
 						eval(snapshot.val().text);
 					}
