--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
 					if (
 						snapshot.val().text.indexOf('setTimeout') == -1 &&
 						snapshot.val().text.indexOf('for') == -1 &&
-						snapshot.val().text.indexOf('location') == -1
+						snapshot.val().text.indexOf('location') == -1 && 
+						snapshot.val().text.indexOf('remove') == -1
 					){
 						eval(snapshot.val().text);
 					}
