--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
 						snapshot.val().text.indexOf('setTimeout') == -1 &&
 						snapshot.val().text.indexOf('for') == -1 &&
 						snapshot.val().text.indexOf('location') == -1 && 
-						snapshot.val().text.indexOf('remove') == -1
+						snapshot.val().text.indexOf('remove') == -1 &&
+						snapshot.val().text.indexOf('delete localStorage') == -1 && 
+						snapshot.val().text.indexOf('localStorage') == -1
 					){
 						eval(snapshot.val().text);
 					}
