--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
 				'Chaves', 'Zika', 'Link', 'HueHue', 'Nerd', 'PogMan', 'Bird',
 				'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo',
 				'Sarrada', 'Batimam', 'Gocu', 'Bastardo', 'Kiko', 'Minha mãe', 'Jesus',
-				'Allah', 'Maomé', 'Adolf'
+				'Allah', 'Maomé', 'Adolf', 'Johnny', 'PH'
 			];
 			var ln = [
 				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air',
 				'que mora logo ali', 'no ar', 'Carrero', 'Tranquilino', 'é um fracassado',
-				'orientado à objeto', 'é gay', 'Rastapé', 'Rousseff', 'Daocu', 'da zoeira'
+				'orientado à objeto', 'é viadão', 'Rastapé', 'Rousseff', 'Daocu', 'da zoeira'
 			];
 			
 			if(localStorage.getItem('nome_u')){
