--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				'Chaves', 'Zika', 'Link', 'HueHue', 'Nerd', 'PogMan', 'Bird',
 				'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo',
 				'Sarrada', 'Batimam', 'Gocu', 'Bastardo', 'Kiko', 'Minha mãe', 'Jesus',
-				'Allah', 'Maomé', 'Adolf', 'Johnny', 'PH'
+				'Allah', 'Maomé', 'Adolf', 'Johnny', 'PH', 'Astronauta', 'Anticristo'
 			];
 			var ln = [
 				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air',
