--- a/index.html
+++ b/index.html
@@ -143,15 +143,13 @@
 					}else if(value.indexOf('script ') != -1){
 						value = value.replace('script ','');
 						myFire.push({name: 'Script run!', text: value, color : randomColor(), type : 'script'});
-					}else if(value.indexOf('mp3 ') != -1){
-						value = value.replace('mp3 ','');
+					}else if(/(\S+?[\\\/])+?\S+?\.(mp3)/gi.test(value)){
 						value = '<audio controls><source src="'+value+'" type="audio/mpeg">Your browser does not support the audio element.</audio>';
 						myFire.push({name: randomName(), text: value, color : randomColor(), type : 'music'});
-					}else{
-						if(/(\S+?[\\\/])+?\S+?\.(png|jpeg|jpg|gif)/gi.test(value)) {
+					}else if(/(\S+?[\\\/])+?\S+?\.(png|jpeg|jpg|gif)/gi.test(value)) {
 							value = '<img style="width: 90%;" src="'+value+'"></img>';
-						}
-						if(value.trim().length > 1){
+					}
+					else if(value.trim().length > 1){
 							myFire.push({name: randomName(), text: value, color : randomColor(), type : 'message'});
 						}
 					}
