--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo',
 				'Sarrada', 'Batimam', 'Gocu', 'Bastardo', 'Kiko', 'Minha mãe', 'Jesus',
 				'Allah', 'Maomé', 'Adolf', 'Johnny', 'PH', 'Astronauta', 'Anticristo', 'Zé',
-				'General', 'Cebolanel', 'Palmeiras'
+				'General', 'Cebolanel', 'Palmeiras', 'Faustão'
 			];
 			var ln = [
 				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air',
