--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 			spanMessage.innerHTML = ' : ' + obj.text;
 			
 			div.appendChild(spanUsuario);
+			div.appendChild(spanTime);
 			div.appendChild(spanMessage);
 			divPrincipal.appendChild(div);
 		};
