--- a/index.html
+++ b/index.html
@@ -117,28 +117,10 @@
 			return localStorage.getItem('cor_u');
 		};
 		var adicionarTexto = function(obj){
-			
-			var divPrincipal = document.querySelector('#messages');
-			var div = document.createElement('div');
-			div.setAttribute('class', 'message');
-			
-			var spanUsuario = document.createElement('span');
-			spanUsuario.setAttribute('class', 'usuario');
-			spanUsuario.setAttribute('style', 'color: #' + obj.color);
-			spanUsuario.innerText = obj.name;
-			
-			var spanTime = document.createElement('span');
-			spanTime.setAttribute('class', 'time');
-			spanTime.innerText = ` (${obj.time})`
-			
-			var spanMessage = document.createElement('span');
-			spanMessage.setAttribute('class', 'messages');
-			spanMessage.innerHTML = ' : ' + obj.text;
-			
-			div.appendChild(spanUsuario);
-			div.appendChild(spanTime);
-			div.appendChild(spanMessage);
-			divPrincipal.appendChild(div);
+			var user = $('<span>').attr('class', 'usuario').css('color', `#${obj.color}`).text(obj.name);
+			var time = $('<span>').attr('class', 'time').text(` (${obj.time})`);
+			var message = $('<span>').attr('class', 'message').text(`: ${obj.text}`);
+			$('#messages').append($('<div>').append(user).append(time).append(message));
 		};
 		$(document).ready(function () {
 			var myFire = new Firebase('https://chat-amigos.firebaseio.com/');
