--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 		var randomName = function(){
 			var fn = [
 				'Chaves', 'Zika', 'Link', 'HueHue', 'Nerd', 'PogMan', 'Bird',
-				'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo', 'MC'
+				'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo', 'MC',
 				'Sarrada', 'Batimam', 'Gocu', 'Bastardo', 'Kiko', 'Minha mãe', 'Jesus',
 				'Allah', 'Maomé', 'Adolf', 'Johnny', 'PH', 'Astronauta', 'Anticristo', 'Zé',
-				'General', 'Cebolanel', 'Palmeiras', 'Faustão', 'Querido', 'Nudes',
+				'General', 'Cebolanel', 'Palmeiras', 'Faustão', 'Querido', 'Nudes'
 			];
 			var ln = [
 				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air',
