--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air',
 				'que mora logo ali', 'no ar', 'Carrero', 'Tranquilino', 'é um fracassado',
 				'orientado à objeto', 'é viadão', 'Rastapé', 'Rousseff', 'Daocu', 'da zoeira',
-				'da Silva', 'não tem mundial', 'no kiyojin'
+				'da Silva', 'não tem mundial', 'no kiyojin', 'do oriente'
 			];
 			
 			if(localStorage.getItem('nome_u')){
