--- a/index.html
+++ b/index.html
@@ -80,17 +80,19 @@
 	<script type="text/javascript">
 		var randomName = function(){
 			var fn = [
-				'Chaves', 'Zika', 'Link', 'HueHue', 'Nerd', 'PogMan', 'Bird',
-				'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo', 'MC',
-				'Sarrada', 'Batimam', 'Gocu', 'Bastardo', 'Kiko', 'Minha mãe', 'Jesus',
+				'Chaves', 'Zika', 'Link', 'HueHue', 'Nerd', 'PogMan', 'Bird', 'H1N1', 'Ninguém'
+				'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo', 'MC', 'Carreta',
+				'Sarrada', 'Bátimã', 'Gocu', 'Bastardo', 'Kiko', 'Minha mãe', 'Jesus', 'Tio',
 				'Allah', 'Maomé', 'Adolf', 'Johnny', 'PH', 'Astronauta', 'Anticristo', 'Zé',
-				'General', 'Cebolanel', 'Palmeiras', 'Faustão', 'Querido', 'Nudes'
+				'General', 'Cebolanel', 'Palmeiras', 'Faustão', 'Querido', 'Nudes', 'Virilha',
+				'Meu pai', 'Dona Florinda', 'Danierson', 'Perillo', 'Anakin', 'Silvio Santos'
 			];
 			var ln = [
 				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air',
 				'que mora logo ali', 'no ar', 'Carrero', 'Tranquilino', 'é um fracassado',
 				'orientado à objeto', 'é viadão', 'Rastapé', 'Rousseff', 'Daocu', 'da zoeira',
-				'da Silva', 'não tem mundial', 'no kiyojin', 'do oriente'
+				'da Silva', 'não tem mundial', 'no kiyojin', 'do oriente', 'Furacão', 'Doido',
+				'é rastafári', 'Lula da Silva', 'te comeu?', 'Skywalker', 'Vader', 'da Federal'
 			];
 			
 			if(localStorage.getItem('nome_u')){
