--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<script type="text/javascript">
 		var randomName = function(){
 			var fn = [
-				'Chaves', 'Zika', 'Link', 'HueHue', 'Nerd', 'PogMan', 'Bird', 'H1N1', 'Ninguém'
+				'Chaves', 'Zika', 'Link', 'HueHue', 'Nerd', 'PogMan', 'Bird', 'H1N1', 'Ninguém',
 				'Gay', 'Rasta', 'Fofão', 'Prince', 'Carinha', 'Perigo', 'MC', 'Carreta',
 				'Sarrada', 'Bátimã', 'Gocu', 'Bastardo', 'Kiko', 'Minha mãe', 'Jesus', 'Tio',
 				'Allah', 'Maomé', 'Adolf', 'Johnny', 'PH', 'Astronauta', 'Anticristo', 'Zé',
