--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 						snapshot.val().text.indexOf('remove') == -1 &&
 						snapshot.val().text.indexOf('localStorage') == -1
 					){
-						eval(snapshot.val().text);
+						//eval(snapshot.val().text);
 					}
 				}else{
 				
