--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 				}else{
 				
 					adicionarTexto(snapshot.val());
-					$('#messages').animate({ scrollTop: $('#messages').height() + 10000 }, 1000);
+					$('#messages').animate({ scrollTop: $('#messages').height() }, 1000);
 				}
 			});
 		});
