--- a/index.html
+++ b/index.html
@@ -85,14 +85,16 @@
 				'Sarrada', 'Bátimã', 'Gocu', 'Bastardo', 'Kiko', 'Minha mãe', 'Jesus', 'Tio',
 				'Allah', 'Maomé', 'Adolf', 'Johnny', 'PH', 'Astronauta', 'Anticristo', 'Zé',
 				'General', 'Cebolanel', 'Palmeiras', 'Faustão', 'Querido', 'Nudes', 'Virilha',
-				'Meu pai', 'Dona Florinda', 'Danierson', 'Perillo', 'Anakin', 'Silvio Santos'
+				'Meu pai', 'Dona Florinda', 'Danierson', 'Perillo', 'Anakin', 'Silvio Santos',
+				'Politico', 'Japonês'
 			];
 			var ln = [
 				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air',
 				'que mora logo ali', 'no ar', 'Carrero', 'Tranquilino', 'é um fracassado',
 				'orientado à objeto', 'é viadão', 'Rastapé', 'Rousseff', 'Daocu', 'da zoeira',
 				'da Silva', 'não tem mundial', 'no kiyojin', 'do oriente', 'Furacão', 'Doido',
-				'é rastafári', 'Lula da Silva', 'te comeu?', 'Skywalker', 'Vader', 'da Federal'
+				'é rastafári', 'Lula da Silva', 'te comeu?', 'Skywalker', 'Vader', 'da Federal',
+				'Boladão', 'Corrupto'
 			];
 			
 			if(localStorage.getItem('nome_u')){
