--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 				}else{
 				
 					adicionarTexto(val);
-					$('#messages').animate({ scrollTop: $('#messages').height() }, 1000);
+					$('#messages').animate({ scrollTop: $('.message').last().offset().top }, 1000);
 				}
 			});
 		});
