--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				'Allah', 'Maomé', 'Adolf', 'Johnny', 'PH', 'Astronauta', 'Anticristo', 'Zé',
 				'General', 'Cebolanel', 'Palmeiras', 'Faustão', 'Querido', 'Nudes', 'Virilha',
 				'Meu pai', 'Dona Florinda', 'Danierson', 'Perillo', 'Anakin', 'Silvio Santos',
-				'Politico', 'Japonês'
+				'Politico', 'Japonês', 'Criolo', 'Nazista', 'Judeu', 'He-man'
 			];
 			var ln = [
 				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air',
@@ -94,7 +94,7 @@
 				'orientado à objeto', 'é viadão', 'Rastapé', 'Rousseff', 'Daocu', 'da zoeira',
 				'da Silva', 'não tem mundial', 'no kiyojin', 'do oriente', 'Furacão', 'Doido',
 				'é rastafári', 'Lula da Silva', 'te comeu?', 'Skywalker', 'Vader', 'da Federal',
-				'Boladão', 'Corrupto'
+				'boladão', 'corrupto'
 			];
 			
 			if(localStorage.getItem('nome_u')){
